--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="description" content="Photographies d'Olivier Janot - La série FRONT END est un itinéraire, un voyage introspectif sur les routes australiennes (2008) et néo-zélandaises (2013). Les standards britanniques et américains, la pop culture, la contre-culture et l’image au cœur de l’urbanisation ont largement influencés ce projet." />
 <meta name="google-site-verification" content="f3unkw13Ymksyde5wkemfH_QBafOpe56DYm7uJqHl48" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="shortcut icon" type="image/x-icon" href="logo/favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="/front-end/logo/favicon.ico">
 <link rel="canonical" href="https://olivier-janot.github.io/front-end/hit-the-road/" />
 <link rel="pingback" href="/front-end/php/xmlrpc.php"/>
 <script type="text/javascript">
