--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body class="blog gecko wpb-js-composer js-comp-ver-3.6.10.1 vc_responsive">
 <div id="header">
 <div class="menu_holder">
-<a id="logotype" class="li_logo1" href="https://olivier-janot.github.io/front-end/"><img src="logo/logo1.png" alt="FRONT END - Olivier Janot"></a>
+<a id="logotype" class="li_logo1" href="https://olivier-janot.github.io/front-end/"><img src="/front-end/logo/logo1.png" alt="FRONT END - Olivier Janot"></a>
 <ul class="header_menu">
   <li><a href="/front-end/hit-the-road/">Hit the road</a></li>
   <li><a href="/front-end/give-a-ride/">Give a ride</a></li>
