--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
 <title>{ FRONT END About }</title>
 <meta name="description" content="Photographies d'Olivier Janot - La série FRONT END est un itinéraire, un voyage introspectif sur les routes australiennes (2008) et néo-zélandaises (2013). Les standards britanniques et américains, la pop culture, la contre-culture et l’image au cœur de l’urbanisation ont largement influencés ce projet." />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="shortcut icon" type="image/x-icon" href="logo/favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="/front-end/logo/favicon.ico">
 <link rel="canonical" href="https://olivier-janot.github.io/front-end/about/" />
 <link rel="pingback" href="php/xmlrpc.php"/>
 
@@ -76,7 +76,7 @@
 <div id="header">
 <div class="menu_logo">
 <div class="menu_holder">
-<a id="logotype" class="li_logo1" href="https://olivier-janot.github.io/front-end/"><img src="logo/logo1.png" alt="FRONT END Check your flight"></a>
+<a id="logotype" class="li_logo1" href="https://olivier-janot.github.io/front-end/"><img src="/front-end/logo/logo1.png" alt="FRONT END Check your flight"></a>
 <ul class="header_menu">
   <li><a href="/front-end/hit-the-road/">Hit the road</a></li>
   <li><a href="/front-end/give-a-ride/">Give a ride</a></li>
@@ -98,7 +98,7 @@
 </div>
 </div>
 <div id="social_icons">
-<a class="tooltip"><img src="logo/logo2.png" alt="FRONT END - Olivier Janot"></a></div>
+<a class="tooltip"><img src="/front-end/logo/logo2.png" alt="FRONT END - Olivier Janot"></a></div>
 <div id="bg_pattern"></div>
 
 <script type="text/javascript">
