--- a/ebook/index.html
+++ b/ebook/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="shortcut icon" type="image/x-icon" href="/front-end/logo/favicon.ico">
 <link rel="canonical" href="https://olivier-janot.github.io/front-end/ebook/" />
-<link rel="pingback" href="php/xmlrpc.php"/>
+<link rel="pingback" href="/front-end/php/xmlrpc.php"/>
 
 <script type="text/javascript">
 	var templatepaths = 'https://olivier-janot.github.io/front-end/ebook/',
@@ -14,13 +14,13 @@
 </script>
 
 <!-- ebook-script-top -->
-<script type="text/javascript" src="js/jquery-1.4.4.min.js"></script>
-<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
-<script type="text/javascript" src="js/jquery.booklet.1.1.0.min.js"></script>
-<link rel="stylesheet" href="js/jquery.booklet.1.1.0.css" type="text/css" media="screen" />
-<link rel="stylesheet" href="css/ebook-style.css" type="text/css" media="screen"/>
-<script type="text/javascript" src="js/ChunkFive_400.font.js"></script>
-<script type="text/javascript" src="js/Note_this_400.font.js"></script>
+<script type="text/javascript" src="/front-end/js/jquery-1.4.4.min.js"></script>
+<script type="text/javascript" src="/front-end/js/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="/front-end/js/jquery.booklet.1.1.0.min.js"></script>
+<link rel="stylesheet" href="/front-end/js/jquery.booklet.1.1.0.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="/front-end/css/ebook-style.css" type="text/css" media="screen"/>
+<script type="text/javascript" src="/front-end/js/ChunkFive_400.font.js"></script>
+<script type="text/javascript" src="/front-end/js/Note_this_400.font.js"></script>
 <script type="text/javascript">
 	Cufon.replace('h1,p,.b-counter');
 	Cufon.replace('.book_wrapper a', {hover:true});
@@ -30,18 +30,18 @@
 </script>
 <!-- ebook-script-end -->
 
-<link rel="stylesheet" id="contact-form-7-css" href="css/styles.css" type="text/css" media="all">
-<link rel="stylesheet" id="prettyphoto-css" href="css/prettyPhoto.css" type="text/css" media="screen">
-<link rel="stylesheet" id="supersized-css" href="css/supersized_002.css" type="text/css" media="screen">
-<link rel="stylesheet" id="supersized-theme-css" href="css/supersized.css" type="text/css" media="screen">
-<link rel="stylesheet" id="js_composer_front-css" href="css/js_composer_front.css" type="text/css" media="screen">
-<link rel="stylesheet" id="theme-css" href="css/style.css" type="text/css" media="screen">
-<script type="text/javascript" src="js/jquery_002.js"></script>
-<script type="text/javascript" src="js/jquery-migrate.js"></script>
-<script type="text/javascript" src="js/supersized.js"></script>
-<script type="text/javascript" src="js/jquery_005.js"></script>
-<script type="text/javascript" src="js/supersized_002.js"></script>
-<script type="text/javascript" src="js/js.js"></script>		
+<link rel="stylesheet" id="contact-form-7-css" href="/front-end/css/styles.css" type="text/css" media="all">
+<link rel="stylesheet" id="prettyphoto-css" href="/front-end/css/prettyPhoto.css" type="text/css" media="screen">
+<link rel="stylesheet" id="supersized-css" href="/front-end/css/supersized_002.css" type="text/css" media="screen">
+<link rel="stylesheet" id="supersized-theme-css" href="/front-end/css/supersized.css" type="text/css" media="screen">
+<link rel="stylesheet" id="js_composer_front-css" href="/front-end/css/js_composer_front.css" type="text/css" media="screen">
+<link rel="stylesheet" id="theme-css" href="/front-end/css/style.css" type="text/css" media="screen">
+<script type="text/javascript" src="/front-end/js/jquery_002.js"></script>
+<script type="text/javascript" src="/front-end/js/jquery-migrate.js"></script>
+<script type="text/javascript" src="/front-end/js/supersized.js"></script>
+<script type="text/javascript" src="/front-end/js/jquery_005.js"></script>
+<script type="text/javascript" src="/front-end/js/supersized_002.js"></script>
+<script type="text/javascript" src="/front-end/js/js.js"></script>		
 <script type="text/javascript">
 	var homepage = "true";
 	var templatepath = 'https://olivier-janot.github.io/front-end/ebook/';
@@ -65,60 +65,60 @@
 			<div id="loading" class="loading">Chargement…</div>
 			<div id="mybook" style="display:none;">
 				<div class="b-load">
-					<div><img src="pic/1.jpg" alt="" /></div>
-					<div><img src="pic/2.jpg" alt="" /></div>
-					<div><img src="pic/3.jpg" alt="" /></div>
-					<div><img src="pic/4.jpg" alt="" /></div>
-					<div><img src="pic/5.jpg" alt="" /></div>
-					<div><img src="pic/6.jpg" alt="" /></div>
-					<div><img src="pic/7.jpg" alt="" /></div>
-					<div><img src="pic/8.jpg" alt="" /></div>
-					<div><img src="pic/9.jpg" alt="" /></div>
-					<div><img src="pic/10.jpg" alt="" /></div>
-					<div><img src="pic/11.jpg" alt="" /></div>
-					<div><img src="pic/12.jpg" alt="" /></div>
-					<div><img src="pic/13.jpg" alt="" /></div>
-					<div><img src="pic/14.jpg" alt="" /></div>
-					<div><img src="pic/15.jpg" alt="" /></div>
-					<div><img src="pic/16.jpg" alt="" /></div>
-					<div><img src="pic/17.jpg" alt="" /></div>
-					<div><img src="pic/18.jpg" alt="" /></div>
-					<div><img src="pic/19.jpg" alt="" /></div>
-					<div><img src="pic/20.jpg" alt="" /></div>
-					<div><img src="pic/21.jpg" alt="" /></div>
-					<div><img src="pic/22.jpg" alt="" /></div>
-					<div><img src="pic/23.jpg" alt="" /></div>
-					<div><img src="pic/24.jpg" alt="" /></div>
-					<div><img src="pic/25.jpg" alt="" /></div>
-					<div><img src="pic/26.jpg" alt="" /></div>
-					<div><img src="pic/27.jpg" alt="" /></div>
-					<div><img src="pic/28.jpg" alt="" /></div>
-					<div><img src="pic/29.jpg" alt="" /></div>
-					<div><img src="pic/30.jpg" alt="" /></div>
-					<div><img src="pic/31.jpg" alt="" /></div>
-					<div><img src="pic/32.jpg" alt="" /></div>
-					<div><img src="pic/33.jpg" alt="" /></div>
-					<div><img src="pic/34.jpg" alt="" /></div>
-					<div><img src="pic/35.jpg" alt="" /></div>
-					<div><img src="pic/36.jpg" alt="" /></div>
-					<div><img src="pic/37.jpg" alt="" /></div>
-					<div><img src="pic/38.jpg" alt="" /></div>
-					<div><img src="pic/39.jpg" alt="" /></div>
-					<div><img src="pic/40.jpg" alt="" /></div>
-					<div><img src="pic/41.jpg" alt="" /></div>
-					<div><img src="pic/42.jpg" alt="" /></div>
-					<div><img src="pic/43.jpg" alt="" /></div>
-					<div><img src="pic/44.jpg" alt="" /></div>
-					<div><img src="pic/45.jpg" alt="" /></div>
-					<div><img src="pic/46.jpg" alt="" /></div>
-					<div><img src="pic/47.jpg" alt="" /></div>
-					<div><img src="pic/48.jpg" alt="" /></div>
-					<div><img src="pic/49.jpg" alt="" /></div>
-					<div><img src="pic/50.jpg" alt="" /></div>
-					<div><img src="pic/51.jpg" alt="" /></div>
-					<div><img src="pic/52.jpg" alt="" /></div>
-					<div><img src="pic/53.jpg" alt="" /></div>
-					<div><img src="pic/54.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/1.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/2.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/3.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/4.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/5.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/6.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/7.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/8.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/9.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/10.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/11.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/12.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/13.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/14.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/15.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/16.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/17.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/18.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/19.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/20.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/21.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/22.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/23.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/24.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/25.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/26.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/27.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/28.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/29.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/30.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/31.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/32.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/33.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/34.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/35.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/36.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/37.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/38.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/39.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/40.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/41.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/42.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/43.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/44.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/45.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/46.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/47.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/48.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/49.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/50.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/51.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/52.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/53.jpg" alt="" /></div>
+					<div><img src="/front-end/pic/54.jpg" alt="" /></div>
 				</div>
 			</div>
 		</div>
@@ -169,13 +169,13 @@ jQuery(function($){
 		// Components							
 		slide_links				:	'blank',	// Individual links for each slide (Options: false, 'num', 'name', 'blank')
 		slides 					:  	[			// Slideshow Images
-{image : 'pic/OlivierJanot01-home.jpg'}
-,{image : 'pic/OlivierJanot03-home.jpg'}
-,{image : 'pic/OlivierJanot04-home.jpg'}
-,{image : 'pic/OlivierJanot05-home.jpg'}
-,{image : 'pic/OlivierJanot06-home.jpg'}
-,{image : 'pic/OlivierJanot07-home.jpg'}
-,{image : 'pic/OlivierJanot08-home.jpg'}
+{image : '/front-end/pic/OlivierJanot01-home.jpg'}
+,{image : '/front-end/pic/OlivierJanot03-home.jpg'}
+,{image : '/front-end/pic/OlivierJanot04-home.jpg'}
+,{image : '/front-end/pic/OlivierJanot05-home.jpg'}
+,{image : '/front-end/pic/OlivierJanot06-home.jpg'}
+,{image : '/front-end/pic/OlivierJanot07-home.jpg'}
+,{image : '/front-end/pic/OlivierJanot08-home.jpg'}
 									]
 		
 	});
@@ -183,11 +183,11 @@ jQuery(function($){
 </script>
 </div>  
 
-<script type='text/javascript' src='js/comment-reply.min.js?ver=3.9'></script>
-<script type='text/javascript' src='js/jquery.form.min.js?ver=3.50.0-2014.02.05'></script>
-<script type='text/javascript' src='js/scripts.js?ver=3.8'></script>
-<script type='text/javascript' src='js/jquery.prettyPhoto.js?ver=3.6.10.1'></script>
-<script type='text/javascript' src='js/masonry.min.js?ver=3.1.2'></script>
-<script type='text/javascript' src='js/jquery.masonry.min.js?ver=3.1.2'></script>
+<script type='text/javascript' src='/front-end/js/comment-reply.min.js?ver=3.9'></script>
+<script type='text/javascript' src='/front-end/js/jquery.form.min.js?ver=3.50.0-2014.02.05'></script>
+<script type='text/javascript' src='/front-end/js/scripts.js?ver=3.8'></script>
+<script type='text/javascript' src='/front-end/js/jquery.prettyPhoto.js?ver=3.6.10.1'></script>
+<script type='text/javascript' src='/front-end/js/masonry.min.js?ver=3.1.2'></script>
+<script type='text/javascript' src='/front-end/js/jquery.masonry.min.js?ver=3.1.2'></script>
 </body>
 </html>
