--- a/fill-the-tank-up/index.html
+++ b/fill-the-tank-up/index.html
@@ -73,7 +73,7 @@
     </div>
     <script>
     // Load the classic theme
-    Galleria.loadTheme('..js/galleria.classic.min.js');
+    Galleria.loadTheme('/front-end/js/galleria.classic.min.js');
 
     // Initialize Galleria
     Galleria.run('#galleria');
