--- a/take-a-break/index.html
+++ b/take-a-break/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="shortcut icon" type="image/x-icon" href="/front-end/logo/favicon.ico">
 <link rel="canonical" href="https://olivier-janot.github.io/front-end/take-a-break/" />
-<link rel="pingback" href="php/xmlrpc.php"/>
+<link rel="pingback" href="/front-end/php/xmlrpc.php"/>
 
 <!-- galleria top -->
         <style>
@@ -22,26 +22,26 @@
             /* This rule is read by Galleria to define the gallery height: */
             #galleria{height:500px}
         </style>
-        <script src="js/jquery.js"></script>
-        <script src="js/galleria-1.3.5.min.js"></script>
+        <script src="/front-end/js/jquery.js"></script>
+        <script src="/front-end/js/galleria-1.3.5.min.js"></script>
 <!-- galleria end -->
 
 <script type="text/javascript">
 	var templatepaths = 'https://olivier-janot.github.io/front-end/take-a-break/',
 		blockrc = 'false';
 </script>
-<link rel="stylesheet" id="contact-form-7-css" href="css/styles.css" type="text/css" media="all">
-<link rel="stylesheet" id="prettyphoto-css" href="css/prettyPhoto.css" type="text/css" media="screen">
-<link rel="stylesheet" id="supersized-css" href="css/supersized_002.css" type="text/css" media="screen">
-<link rel="stylesheet" id="supersized-theme-css" href="css/supersized.css" type="text/css" media="screen">
-<link rel="stylesheet" id="js_composer_front-css" href="css/js_composer_front.css" type="text/css" media="screen">
-<link rel="stylesheet" id="theme-css" href="css/style.css" type="text/css" media="screen">
-<script type="text/javascript" src="js/jquery_002.js"></script>
-<script type="text/javascript" src="js/jquery-migrate.js"></script>
-<script type="text/javascript" src="js/supersized.js"></script>
-<script type="text/javascript" src="js/jquery_005.js"></script>
-<script type="text/javascript" src="js/supersized_002.js"></script>
-<script type="text/javascript" src="js/js.js"></script>
+<link rel="stylesheet" id="contact-form-7-css" href="/front-end/css/styles.css" type="text/css" media="all">
+<link rel="stylesheet" id="prettyphoto-css" href="/front-end/css/prettyPhoto.css" type="text/css" media="screen">
+<link rel="stylesheet" id="supersized-css" href="/front-end/css/supersized_002.css" type="text/css" media="screen">
+<link rel="stylesheet" id="supersized-theme-css" href="/front-end/css/supersized.css" type="text/css" media="screen">
+<link rel="stylesheet" id="js_composer_front-css" href="/front-end/css/js_composer_front.css" type="text/css" media="screen">
+<link rel="stylesheet" id="theme-css" href="/front-end/css/style.css" type="text/css" media="screen">
+<script type="text/javascript" src="/front-end/js/jquery_002.js"></script>
+<script type="text/javascript" src="/front-end/js/jquery-migrate.js"></script>
+<script type="text/javascript" src="/front-end/js/supersized.js"></script>
+<script type="text/javascript" src="/front-end/js/jquery_005.js"></script>
+<script type="text/javascript" src="/front-end/js/supersized_002.js"></script>
+<script type="text/javascript" src="/front-end/js/js.js"></script>
 <script type="text/javascript">
 	var homepage = "true";
 	var templatepath = 'https://olivier-janot.github.io/front-end/take-a-break/';
@@ -62,18 +62,18 @@
     <div class="content">
         <div id="galleria">
         
-<a href="pic/OlivierJanot01-break.jpg"><img title="Keep Out Park, Dunedin, New Zealand - 2013" alt="All Rights Reserved © OlivierJanot" src="pic/OlivierJanot01-break.jpg" /></a>
-<a href="pic/OlivierJanot02-break.jpg"><img title="Under the Tree of Life, Auckland, Castor Bay, NZ - 2013" alt="All Rights Reserved © OlivierJanot" src="pic/OlivierJanot02-break.jpg" /></a>
-<a href="pic/OlivierJanot03-break.jpg"><img title="Hong-Kong, China - 2008" alt="All Rights Reserved © OlivierJanot" src="pic/OlivierJanot03-break.jpg" /></a>
-<a href="pic/OlivierJanot04-break.jpg"><img title="Alone on a Checkerboard, Sydney, NSW, Australia - 2008" alt="All Rights Reserved © OlivierJanot" src="pic/OlivierJanot04-break.jpg" /></a>
-<a href="pic/OlivierJanot05-break.jpg"><img title="Christchurch, Banks Peninsula, New Zealand - 2013" alt="All Rights Reserved © OlivierJanot" src="pic/OlivierJanot05-break.jpg" /></a>
-<a href="pic/OlivierJanot06-break.jpg"><img title="Auckland, New Zealand - 2013" alt="All Rights Reserved © OlivierJanot" src="pic/OlivierJanot06-break.jpg" /></a>
+<a href="/front-end/pic/OlivierJanot01-break.jpg"><img title="Keep Out Park, Dunedin, New Zealand - 2013" alt="All Rights Reserved © OlivierJanot" src="pic/OlivierJanot01-break.jpg" /></a>
+<a href="/front-end/pic/OlivierJanot02-break.jpg"><img title="Under the Tree of Life, Auckland, Castor Bay, NZ - 2013" alt="All Rights Reserved © OlivierJanot" src="pic/OlivierJanot02-break.jpg" /></a>
+<a href="/front-end/pic/OlivierJanot03-break.jpg"><img title="Hong-Kong, China - 2008" alt="All Rights Reserved © OlivierJanot" src="pic/OlivierJanot03-break.jpg" /></a>
+<a href="/front-end/pic/OlivierJanot04-break.jpg"><img title="Alone on a Checkerboard, Sydney, NSW, Australia - 2008" alt="All Rights Reserved © OlivierJanot" src="pic/OlivierJanot04-break.jpg" /></a>
+<a href="/front-end/pic/OlivierJanot05-break.jpg"><img title="Christchurch, Banks Peninsula, New Zealand - 2013" alt="All Rights Reserved © OlivierJanot" src="pic/OlivierJanot05-break.jpg" /></a>
+<a href="/front-end/pic/OlivierJanot06-break.jpg"><img title="Auckland, New Zealand - 2013" alt="All Rights Reserved © OlivierJanot" src="pic/OlivierJanot06-break.jpg" /></a>
  
         </div>
     </div>
     <script>
     // Load the classic theme
-    Galleria.loadTheme('..js/galleria.classic.min.js');
+    Galleria.loadTheme('/front-end/js/galleria.classic.min.js');
 
     // Initialize Galleria
     Galleria.run('#galleria');
@@ -105,7 +105,7 @@
 </div>
 </div>
 <div id="social_icons">
-<a class="tooltip"><img src="logo/logo2.png" alt="FRONT END - Olivier Janot"></a></div>
+<a class="tooltip"><img src="/front-end/logo/logo2.png" alt="FRONT END - Olivier Janot"></a></div>
 <div id="bg_pattern"></div>
 
 <script type="text/javascript">
@@ -124,12 +124,12 @@ jQuery(function($){
 		// Components							
 		slide_links				:	'blank',	// Individual links for each slide (Options: false, 'num', 'name', 'blank')
 		slides 					:  	[			// Slideshow Images
-{image : 'pic/OlivierJanot06-home.jpg'}
-,{image : 'pic/OlivierJanot07-home.jpg'}
-,{image : 'pic/OlivierJanot08-home.jpg'}
-,{image : 'pic/OlivierJanot03-home.jpg'}
-,{image : 'pic/OlivierJanot04-home.jpg'}
-,{image : 'pic/OlivierJanot05-home.jpg'}
+{image : '/front-end/pic/OlivierJanot06-home.jpg'}
+,{image : '/front-end/pic/OlivierJanot07-home.jpg'}
+,{image : '/front-end/pic/OlivierJanot08-home.jpg'}
+,{image : '/front-end/pic/OlivierJanot03-home.jpg'}
+,{image : '/front-end/pic/OlivierJanot04-home.jpg'}
+,{image : '/front-end/pic/OlivierJanot05-home.jpg'}
 									]
 		
 	});
@@ -137,11 +137,11 @@ jQuery(function($){
 </script>
 </div>  
 
-<script type='text/javascript' src='js/comment-reply.min.js?ver=3.9'></script>
-<script type='text/javascript' src='js/jquery.form.min.js?ver=3.50.0-2014.02.05'></script>
-<script type='text/javascript' src='js/scripts.js?ver=3.8'></script>
-<script type='text/javascript' src='js/jquery.prettyPhoto.js?ver=3.6.10.1'></script>
-<script type='text/javascript' src='js/masonry.min.js?ver=3.1.2'></script>
-<script type='text/javascript' src='js/jquery.masonry.min.js?ver=3.1.2'></script>
+<script type='text/javascript' src='/front-end/js/comment-reply.min.js?ver=3.9'></script>
+<script type='text/javascript' src='/front-end/js/jquery.form.min.js?ver=3.50.0-2014.02.05'></script>
+<script type='text/javascript' src='/front-end/js/scripts.js?ver=3.8'></script>
+<script type='text/javascript' src='/front-end/js/jquery.prettyPhoto.js?ver=3.6.10.1'></script>
+<script type='text/javascript' src='/front-end/js/masonry.min.js?ver=3.1.2'></script>
+<script type='text/javascript' src='/front-end/js/jquery.masonry.min.js?ver=3.1.2'></script>
 </body>
 </html>
