--- a/ebook/index.html
+++ b/ebook/index.html
@@ -122,7 +122,7 @@
 				</div>
 			</div>
 		</div>
-		<script type="text/javascript" src="js/ebook.js"></script>
+		<script type="text/javascript" src="/front-end/js/ebook.js"></script>
 <!-- ebook-end -->
 
 <div id="header">
