--- a/check-your-flight/index.html
+++ b/check-your-flight/index.html
@@ -73,7 +73,7 @@
     </div>
     <script>
     // Load the classic theme
-    Galleria.loadTheme('/front-end/js/galleria.classic.min.js');
+    Galleria.loadTheme('../galleria/themes/classic/galleria.classic.min.js');
 
     // Initialize Galleria
     Galleria.run('#galleria');
