--- a/about/index.html
+++ b/about/index.html
@@ -66,7 +66,7 @@
     </div>
     <script>
     // Load the classic theme
-    Galleria.loadTheme('/front-end/js/galleria.classic.min.about.js');
+    Galleria.loadTheme('/front-end/galleria/themes/classic/galleria.classic.min.js');
 
     // Initialize Galleria
     Galleria.run('#galleria');
