--- a/fill-the-tank-up/index.html
+++ b/fill-the-tank-up/index.html
@@ -23,7 +23,7 @@
             #galleria{height:500px}
         </style>
         <script src="/front-end/js/jquery.js"></script>
-        <script src="/front-end/js/galleria-1.3.5.min.js"></script>
+        <script src="/front-end/galleria/src/themes/classic/galleria.classic.js"></script>
 <!-- galleria end -->
 
 <script type="text/javascript">
