--- a/about/index.html
+++ b/about/index.html
@@ -70,7 +70,7 @@
     Galleria.loadTheme('/front-end/galleria/src/themes/classic/galleria.classic.js');
 
     // Initialize Galleria
-    Galleria.run('#galleria');
+    Galleria.run('.galleria');
     </script>
 <!-- galleria end -->
 
