--- a/hit-the-road/index.html
+++ b/hit-the-road/index.html
@@ -76,7 +76,7 @@
     Galleria.loadTheme('/front-end/galleria/src/themes/classic/galleria.classic.js');
 
     // Initialize Galleria
-    Galleria.run('#galleria');
+    Galleria.run('.galleria');
     </script>
 <!-- galleria end -->
 
