--- a/fill-the-tank-up/index.html
+++ b/fill-the-tank-up/index.html
@@ -24,6 +24,7 @@
         </style>
         <script src="/front-end/js/jquery.js"></script>
         <script src="/front-end/galleria/src/themes/classic/galleria.classic.js"></script>
+		<link rel="stylesheet" href="galleria/src/themes/classic/galleria.classic.css">
 <!-- galleria end -->
 
 <script type="text/javascript">
