--- a/hit-the-road/index.html
+++ b/hit-the-road/index.html
@@ -63,12 +63,12 @@
     <div class="content">
         <div id="galleria">
         
-<a href="/front-end/pic/OlivierJanot01-road.jpg"><img title="Sydney, NSW, Australia - 2008" alt="All Rights Reserved © OlivierJanot" src="pic/OlivierJanot01-road.jpg" /></a>
-<a href="/front-end/pic/OlivierJanot02-road.jpg"><img title="Open Road, New Zealand - 2013" alt="All Rights Reserved © OlivierJanot" src="pic/OlivierJanot02-road.jpg" /></a>
-<a href="/front-end/pic/OlivierJanot03-road.jpg"><img title="Auckland, New Zealand - 2012" alt="All Rights Reserved © OlivierJanot" src="pic/OlivierJanot03-road.jpg" /></a>
-<a href="/front-end/pic/OlivierJanot04-road.jpg"><img title="1972 Ford XA Falcon 500, Picton, New Zealand - 2013" alt="All Rights Reserved © OlivierJanot" src="pic/OlivierJanot04-road.jpg" /></a>
-<a href="/front-end/pic/OlivierJanot05-road.jpg"><img title="Southern Suburb, Tuatapere, New Zealand - 2013" alt="All Rights Reserved © OlivierJanot" src="pic/OlivierJanot05-road.jpg" /></a>
-<a href="/front-end/pic/OlivierJanot06-road.jpg"><img title="New Zealand - 2013" alt="All Rights Reserved © OlivierJanot" src="pic/OlivierJanot06-road.jpg" /></a>
+<a href="/front-end/pic/OlivierJanot01-road.jpg"><img title="Sydney, NSW, Australia - 2008" alt="All Rights Reserved © OlivierJanot" src="/front-end/pic/OlivierJanot01-road.jpg" /></a>
+<a href="/front-end/pic/OlivierJanot02-road.jpg"><img title="Open Road, New Zealand - 2013" alt="All Rights Reserved © OlivierJanot" src="/front-end/pic/OlivierJanot02-road.jpg" /></a>
+<a href="/front-end/pic/OlivierJanot03-road.jpg"><img title="Auckland, New Zealand - 2012" alt="All Rights Reserved © OlivierJanot" src="/front-end/pic/OlivierJanot03-road.jpg" /></a>
+<a href="/front-end/pic/OlivierJanot04-road.jpg"><img title="1972 Ford XA Falcon 500, Picton, New Zealand - 2013" alt="All Rights Reserved © OlivierJanot" src="/front-end/pic/OlivierJanot04-road.jpg" /></a>
+<a href="/front-end/pic/OlivierJanot05-road.jpg"><img title="Southern Suburb, Tuatapere, New Zealand - 2013" alt="All Rights Reserved © OlivierJanot" src="/front-end/pic/OlivierJanot05-road.jpg" /></a>
+<a href="/front-end/pic/OlivierJanot06-road.jpg"><img title="New Zealand - 2013" alt="All Rights Reserved © OlivierJanot" src="/front-end/pic/OlivierJanot06-road.jpg" /></a>
  
         </div>
     </div>
