--- a/take-a-break/index.html
+++ b/take-a-break/index.html
@@ -1,148 +1,47 @@
 <!DOCTYPE HTML>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
+<html lang="en-US">
 <head>
-<title>Take a break</title>
-<meta name="description" content="Photographies d'Olivier Janot - La série FRONT END est un itinéraire, un voyage introspectif sur les routes australiennes (2008) et néo-zélandaises (2013). Les standards britanniques et américains, la pop culture, la contre-culture et l’image au cœur de l’urbanisation ont largement influencés ce projet." />
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="shortcut icon" type="image/x-icon" href="/front-end/logo/favicon.ico">
-<link rel="canonical" href="https://olivier-janot.github.io/front-end/take-a-break/" />
-<link rel="pingback" href="/front-end/php/xmlrpc.php"/>
+<meta charset="UTF-8">
+<title>Take a Break</title>
+<meta name="description" content="Photographies d'Olivier Janot - La série FRONT END est un itinéraire, un voyage introspectif sur les routes australiennes (2008) et néo-zélandaises (2013).">
+<link rel="shortcut icon" href="../logo/favicon.ico">
 
-<!-- galleria top -->
-        <style>
-            /* Demo styles */
-            html,body{background:#222;margin:0;}
-            body{border-top:4px solid #000;}
-            .content{color:#777;font:12px/1.4 "helvetica neue",arial,sans-serif;width:750px;margin:20px auto;}
-            h1{font-size:12px;font-weight:normal;color:#ddd;margin:0;}
-            p{margin:0 0 20px}
-            a {color:#22BCB9;text-decoration:none;}
-            .cred{margin-top:20px;font-size:11px;}
+<!-- Galleria CSS -->
+<link rel="stylesheet" href="../galleria/themes/classic/galleria.classic.css">
 
-            /* This rule is read by Galleria to define the gallery height: */
-            #galleria{height:500px}
-        </style>
-        <script src="/front-end/js/jquery.js"></script>
-        <script src="/front-end/galleria/src/themes/classic/galleria.classic.js"></script>
-		<link rel="stylesheet" href="/front-end/galleria/src/themes/classic/galleria.classic.css">
-<!-- galleria end -->
-
-<script type="text/javascript">
-	var templatepaths = 'https://olivier-janot.github.io/front-end/take-a-break/',
-		blockrc = 'false';
-</script>
-<link rel="stylesheet" id="contact-form-7-css" href="/front-end/css/styles.css" type="text/css" media="all">
-<link rel="stylesheet" id="prettyphoto-css" href="/front-end/css/prettyPhoto.css" type="text/css" media="screen">
-<link rel="stylesheet" id="supersized-css" href="/front-end/css/supersized_002.css" type="text/css" media="screen">
-<link rel="stylesheet" id="supersized-theme-css" href="/front-end/css/supersized.css" type="text/css" media="screen">
-<link rel="stylesheet" id="js_composer_front-css" href="/front-end/css/js_composer_front.css" type="text/css" media="screen">
-<link rel="stylesheet" id="theme-css" href="/front-end/css/style.css" type="text/css" media="screen">
-<script type="text/javascript" src="/front-end/js/jquery_002.js"></script>
-<script type="text/javascript" src="/front-end/js/jquery-migrate.js"></script>
-<script type="text/javascript" src="/front-end/js/supersized.js"></script>
-<script type="text/javascript" src="/front-end/js/jquery_005.js"></script>
-<script type="text/javascript" src="/front-end/js/supersized_002.js"></script>
-<script type="text/javascript" src="/front-end/js/js.js"></script>
-<script type="text/javascript">
-	var homepage = "true";
-	var templatepath = 'https://olivier-janot.github.io/front-end/take-a-break/';
-	var sitepath = 'https://olivier-janot.github.io/front-end/take-a-break/';
-</script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-52121777-1', 'auto');
-  ga('send', 'pageview');
-</script>
+<!-- Styles page -->
+<style>
+  html, body { background:#222; margin:0; }
+  body { border-top:4px solid #000; }
+  .content { color:#777; font:12px/1.4 "helvetica neue",arial,sans-serif; width:750px; margin:20px auto; }
+  h1 { font-size:12px; font-weight:normal; color:#ddd; margin:0; }
+  p { margin:0 0 20px; }
+  a { color:#22BCB9; text-decoration:none; }
+  .cred { margin-top:20px; font-size:11px; }
+  #galleria { height:500px; }
+</style>
 </head>
-<body class="blog gecko wpb-js-composer js-comp-ver-3.6.10.1 vc_responsive">
+<body>
 
-<!-- galleria top -->
-    <div class="content">
-        <div id="galleria">
-        
-<a href="/front-end/pic/OlivierJanot01-break.jpg"><img title="Keep Out Park, Dunedin, New Zealand - 2013" alt="All Rights Reserved © OlivierJanot" src="/front-end/pic/OlivierJanot01-break.jpg" /></a>
-<a href="/front-end/pic/OlivierJanot02-break.jpg"><img title="Under the Tree of Life, Auckland, Castor Bay, NZ - 2013" alt="All Rights Reserved © OlivierJanot" src="/front-end/pic/OlivierJanot02-break.jpg" /></a>
-<a href="/front-end/pic/OlivierJanot03-break.jpg"><img title="Hong-Kong, China - 2008" alt="All Rights Reserved © OlivierJanot" src="/front-end/pic/OlivierJanot03-break.jpg" /></a>
-<a href="/front-end/pic/OlivierJanot04-break.jpg"><img title="Alone on a Checkerboard, Sydney, NSW, Australia - 2008" alt="All Rights Reserved © OlivierJanot" src="/front-end/pic/OlivierJanot04-break.jpg" /></a>
-<a href="/front-end/pic/OlivierJanot05-break.jpg"><img title="Christchurch, Banks Peninsula, New Zealand - 2013" alt="All Rights Reserved © OlivierJanot" src="/front-end/pic/OlivierJanot05-break.jpg" /></a>
-<a href="/front-end/pic/OlivierJanot06-break.jpg"><img title="Auckland, New Zealand - 2013" alt="All Rights Reserved © OlivierJanot" src="/front-end/pic/OlivierJanot06-break.jpg" /></a>
- 
-        </div>
-    </div>
-    <script>
-    // Load the classic theme
-    Galleria.loadTheme('/front-end/galleria/src/themes/classic/galleria.classic.js');
-
-    // Initialize Galleria
-    Galleria.run('#galleria');
-    </script>
-<!-- galleria end -->
-
-<div id="header">
-<div class="menu_logo">
-<div class="menu_holder">
-<a id="logotype" class="li_logo1" href="https://olivier-janot.github.io/front-end/"><img src="/front-end/logo/logo1.png" alt="FRONT END Check your flight"></a>
-<ul class="header_menu">
-  <li><a href="/front-end/hit-the-road/">Hit the road</a></li>
-  <li><a href="/front-end/give-a-ride/">Give a ride</a></li>
-  <li><a href="/front-end/take-a-break/">Take a break</a></li>
-  <li><a href="/front-end/fill-the-tank-up/">Fill the tank up</a></li>
-  <li><a href="/front-end/check-your-flight/">Check your flight</a></li>
-  <li><a href="/front-end/about/">About</a></li>
-  <li><a href="/front-end/ebook/">Moleskine ®</a></li>
-  <li><a href="http://www.amazon.com/FRONT-END-Olivier-Janot/dp/1457974207" target="_blank">Store</a></li>
-  <li><a href="https://www.facebook.com/front.end.pics" target="_blank">
-      <img src="/front-end/logo/facebook.png" alt="Facebook"/>
-  </a></li>
-  <li><a href="mailto:olivier.janot@gmail.com">@</a></li>
-</ul>
-
-
-<div class="wpb_clear"></div>
+<div class="content">
+  <div id="galleria">
+    <a href="../pic/OlivierJanot01-break.jpg"><img src="../pic/OlivierJanot01-break.jpg" alt="Keep Out Park, Dunedin, New Zealand - 2013"></a>
+    <a href="../pic/OlivierJanot02-break.jpg"><img src="../pic/OlivierJanot02-break.jpg" alt="Under the Tree of Life, Auckland, Castor Bay, NZ - 2013"></a>
+    <a href="../pic/OlivierJanot03-break.jpg"><img src="../pic/OlivierJanot03-break.jpg" alt="Hong-Kong, China - 2008"></a>
+    <a href="../pic/OlivierJanot04-break.jpg"><img src="../pic/OlivierJanot04-break.jpg" alt="Alone on a Checkerboard, Sydney, NSW, Australia - 2008"></a>
+    <a href="../pic/OlivierJanot05-break.jpg"><img src="../pic/OlivierJanot05-break.jpg" alt="Christchurch, Banks Peninsula, New Zealand - 2013"></a>
+    <a href="../pic/OlivierJanot06-break.jpg"><img src="../pic/OlivierJanot06-break.jpg" alt="Auckland, New Zealand - 2013"></a>
+  </div>
 </div>
-</div>
-</div>
-<div id="social_icons">
-<a class="tooltip"><img src="/front-end/logo/logo2.png" alt="FRONT END - Olivier Janot"></a></div>
-<div id="bg_pattern"></div>
 
-<script type="text/javascript">
-jQuery(function($){
-	
-	$.supersized({
-	
-		// Functionality
-		autoplay				:	true,
-		keyboard_nav			:	false,
-		slide_interval          :   5*500,		// Length between transitions
-		transition              :   1,		// 0-None, 1-Fade, 2-Slide Top, 3-Slide Right, 4-Slide Bottom, 5-Slide Left, 6-Carousel Right, 7-Carousel Left
-		transition_speed		:	1500,		// 700 Speed of transition
-		fit_always				: 	false,
-												   
-		// Components							
-		slide_links				:	'blank',	// Individual links for each slide (Options: false, 'num', 'name', 'blank')
-		slides 					:  	[			// Slideshow Images
-{image : '/front-end/pic/OlivierJanot06-home.jpg'}
-,{image : '/front-end/pic/OlivierJanot07-home.jpg'}
-,{image : '/front-end/pic/OlivierJanot08-home.jpg'}
-,{image : '/front-end/pic/OlivierJanot03-home.jpg'}
-,{image : '/front-end/pic/OlivierJanot04-home.jpg'}
-,{image : '/front-end/pic/OlivierJanot05-home.jpg'}
-									]
-		
-	});
-});
+<!-- JS -->
+<script src="../js/jquery.js"></script>
+<script src="../galleria/galleria.min.js"></script>
+<script src="../galleria/themes/classic/galleria.classic.js"></script>
+<script>
+  // Initialise Galleria
+  Galleria.run('#galleria');
 </script>
-</div>  
 
-<script type='text/javascript' src='/front-end/js/comment-reply.min.js?ver=3.9'></script>
-<script type='text/javascript' src='/front-end/js/jquery.form.min.js?ver=3.50.0-2014.02.05'></script>
-<script type='text/javascript' src='/front-end/js/scripts.js?ver=3.8'></script>
-<script type='text/javascript' src='/front-end/js/jquery.prettyPhoto.js?ver=3.6.10.1'></script>
-<script type='text/javascript' src='/front-end/js/masonry.min.js?ver=3.1.2'></script>
-<script type='text/javascript' src='/front-end/js/jquery.masonry.min.js?ver=3.1.2'></script>
 </body>
 </html>
